--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@
     
 }
 
-
 .bg-color-fare {
     background-color: #A0BFB0;
 }
@@ -39,6 +38,10 @@
 background-color: #D3C0B2;
 }                   
 
+/* 
+.bg-card-footer-one {
+    background-color: red;
+} */
 /* ---------------------------------navbar */
 
 .nav-link {
@@ -156,9 +159,6 @@ background-color: #D3C0B2;
 }
 
 
-
-
-
 .card-one {
     display: flex;
     flex-wrap: nowrap;
@@ -179,12 +179,12 @@ background-color: #D3C0B2;
 }  
 
 
-
 .col {
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 justify-content: space-between;
-}  
+padding-left: 5%;
+}   
 
 .card-1,
 .card-3 {
@@ -237,23 +237,160 @@ text-align: center;
 .card-text {
     font-family: 'Dosis', sans-serif;
     font-size: 18px;
-    color:#A0BFB0;
+    color: #69615B;
     font-weight: 400;
     padding: 5px;
 
 }
 
 
+/* ---------------------------------Footer */ 
 
-/* .nav-item li i {
-    padding-top: 28px;
-    display: contents;
-    color: #854A14;
-    font-size: 26px;
-    line-height: 2;
+.main-footer { 
+    margin-top: 3%;
+    border-style: solid;
+    border-width: 28px;
+    border-color: #857B74;  
+    align-content: center;
+    padding-left: 30px;
+    padding-right: 30px;  
+    border-top-right-radius: 25%;
+    border-bottom-left-radius: 25%;      
+
+}  
+
+
+.main-footer {
+    padding-top: 3%;
+    padding-bottom: 3%;
+
+}
+
+
+.main-footer-container {
+    background-size: cover;
+    width: 100%;
+    justify-content: center;
+    min-height: 120px;
+    line-height: 15px;
+    padding-top: 2%;
+    border-top-right-radius: 25%;
+    border-bottom-left-radius: 25%;      
+
+   
+}
+
+.main-footer-row {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+ 
+.main-footer h4 {
+    font-size: 38px;
+    font-family: 'Dancing Script', cursive;   
+    font-weight: 800;  
+    font-style: bold; 
+    color: #69615B;
+    margin-bottom: 35px;
+    position: relative;
+    
 } 
 
-#80aaa6
+
+.main-footer p {
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500;  
+    color: #69615B;
+    margin-bottom: 35px;
+    position: relative;
+    letter-spacing: 2px;
+}  
+
+
+.main-footer-col {
+    display: flex;
+    flex-wrap: nowrap;
+    column-gap: 2%;
+    column-width: 30%;
+    padding-left: 8%;
+    padding-right: 5%;
+
+}
+
+
+.cv-pdf i {
+    font-size: 26px;
+    color: #857B74 ;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+
+}
+
+.cv-pdf i:hover {
+    color: #A99282;
+}
+
+
+.social-link  i {
+    width: 34px;
+    height: 34px;
+    padding: 14px 0;
+    border-radius: 50%;
+    font-size: 24px;
+    line-height: 5px;
+    text-align: center;
+    color:#F4F2F0;
+    background: #857B74;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-link  i:hover {
+    background: #A99282;
+} 
+
+
+/* 
+---------------------------------Media Queries
+
+@media(min-width: 992px) {
+    .centre-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
+    
+} */
+-------
+
+
+/*-------------------------------- Responsive Main Footer Section */
+
+
+@media(max-width: 767px){
+.main-footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+
+}
+}
+
+@media(max-width: 574px){
+.main-footer-col {
+    width: 100%;
+    
+    }
+    }
 
 
 
@@ -265,10 +402,4 @@ text-align: center;
 
 
 
-
-
-
-
-
-
-
+ 
