--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap'); 
 
 
+/* --------------------------------- Skills and Attributes */
+
+
+ .skill-one-container {
+    background-size: cover;
+    width: 100%;
+    justify-content: left;
+    min-height: 120px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    
+ } 
+
+
+.skill-one h4 {
+    color: blue;
+    font-size: 24px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 600;  
+    font-style: bold; 
+    color: #707070;
+    margin-bottom: 5px;
+     
+}
+
+.skill-one p {
+    color: red;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500; 
+    font-style: bold;
+    margin-bottom: 35px;
+    letter-spacing: 1px;
+    padding-bottom: 8px;
+}  
+
+.skill-title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    width: 100%; 
+    padding-top: 5px;
+    padding-bottom: 5px;
+ 
+}  
+
+.skill-title h2 {
+    color: #69615B;
+    font-family: 'Dancing Script', cursive;   
+    font-weight: 800;
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+
+.skill-three-container {
+    background-size: cover;
+    width: 100%;
+    min-height: 120px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
+}  
+
+
+.skill-three {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.skill-three h4 {
+    color: blue;
+    font-size: 24px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 600;  
+    font-style: bold; 
+    color: #707070;
+    margin-bottom: 5px;
+     
+}
+
+.skill-three ul {
+    color: red;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500; 
+    font-style: bold;
+    margin-bottom: 35px;
+    letter-spacing: 1px;
+    padding-bottom: 8px;   
+
+}
+
+
 /* --------------------------------- Background image */
 
-.container-bg{
+.container-bg {
         background: url("../images/heather.png");
         background-size: cover;
         background-repeat: no-repeat;
@@ -231,6 +330,103 @@ text-align: center;
 }
 
 
+/* --------------------------------- Skills and Attributes */
+
+.skill-one-container {
+    background-size: cover;
+    width: 100%;
+    justify-content: left;
+    min-height: 120px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    
+ } 
+
+
+.skill-one h4 {
+    color: #24522E;
+    font-size: 24px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 600;  
+    font-style: bold; 
+    color: #707070;
+    margin-bottom: 5px;
+     
+}
+
+.skill-one p {
+    color: #A0BFB0;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500; 
+    font-style: bold;
+    margin-bottom: 35px;
+    letter-spacing: 1px;
+    padding-bottom: 8px;
+}  
+
+.skill-title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    width: 100%; 
+    padding-top: 5px;
+    padding-bottom: 5px;
+ 
+}  
+
+.skill-title h2 {
+    color: #69615B;
+    font-family: 'Dancing Script', cursive;   
+    font-weight: 800;
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+
+.skill-three-container {
+    background-size: cover;
+    width: 100%;
+    min-height: 120px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
+}  
+
+
+.skill-three {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.skill-three h4 {
+    color: #24522E;
+    font-size: 24px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 600;  
+    font-style: bold; 
+    margin-bottom: 5px;
+     
+}
+
+.skill-three ul {
+    color: #A0BFB0;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500; 
+    font-style: bold;
+    margin-bottom: 35px;
+    letter-spacing: 1px;
+    padding-bottom: 8px;   
+
+}
+
+
 /* ---------------------------------Footer */ 
 
 .main-footer { 
@@ -264,6 +460,7 @@ text-align: center;
 
  
 .main-footer h4 {
+    text-align: center;
     font-size: 24px;
     font-family: 'Dosis', sans-serif;
     font-weight: 600;  
@@ -306,6 +503,7 @@ text-align: center;
 
 
 .social-link  i {
+margin-left: 185px;
     width: 34px;
     height: 34px;
     padding: 14px 0;
