--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Capriola&display=swap'); 
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap'); 
-
-
-/* --------------------------------- Skills and Attributes */
-
-
- .skill-one-container {
-    background-size: cover;
-    width: 100%;
-    justify-content: left;
-    min-height: 120px;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-bottom: 15px;
-    
- } 
-
-
-.skill-one h4 {
-    color: blue;
-    font-size: 24px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;  
-    font-style: bold; 
-    color: #707070;
-    margin-bottom: 5px;
-     
-}
-
-.skill-one p {
-    color: red;
-    font-size: 18px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500; 
-    font-style: bold;
-    margin-bottom: 35px;
-    letter-spacing: 1px;
-    padding-bottom: 8px;
-}  
-
-.skill-title-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    width: 100%; 
-    padding-top: 5px;
-    padding-bottom: 5px;
- 
-}  
-
-.skill-title h2 {
-    color: #69615B;
-    font-family: 'Dancing Script', cursive;   
-    font-weight: 800;
-    font-size: 48px;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-
-.skill-three-container {
-    background-size: cover;
-    width: 100%;
-    min-height: 120px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    
-}  
-
-
-.skill-three {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-.skill-three h4 {
-    color: blue;
-    font-size: 24px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;  
-    font-style: bold; 
-    color: #707070;
-    margin-bottom: 5px;
-     
-}
-
-.skill-three ul {
-    color: red;
-    font-size: 18px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500; 
-    font-style: bold;
-    margin-bottom: 35px;
-    letter-spacing: 1px;
-    padding-bottom: 8px;   
-
-}
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300;400;500;600;700;800;900&display=swap'); 
 
 
 /* --------------------------------- Background image */
@@ -128,24 +29,26 @@
 
 .bg-color-fare {
     background-color: #A0BFB0;
+
 }
 
 .bg-card-one {
 background-color: #D3C0B2;
-}                   
 
+}                   
 
 /* ---------------------------------navbar */
 
+
 .nav-link {
-    text-align: center;
-    font-family: 'Dosis', sans-serif;   
     color: #69615B;
+    text-align: center;
+    font-family: 'Capriola', sans-serif;
     font-size: 28px;
-    font-weight: 500;
+    font-style: bold;
+    margin-bottom: 5px; 
   
 }   
-
 
 .profile-logo {
     background: url("../images/profile.jpg");
@@ -156,7 +59,6 @@ background-color: #D3C0B2;
     flex-wrap: nowrap;
   
 }
-
 
 .name-title {  
     display: flex;
@@ -171,55 +73,167 @@ background-color: #D3C0B2;
 
 } 
 
-
 .name-title h1 {
     color: #69615B;
-    font-family: 'Dancing Script', cursive;   
+    font-family: 'Merienda', cursive;
     font-weight: 800;
-    font-size: 48px;
+    font-size: 38px;
     text-align: center;
     text-decoration: none;
     flex-wrap: nowrap;
 
 } 
 
-
 .name-title h2 {
     color: #69615B;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500;
+    font-family: 'Merienda', cursive;
+    font-weight: 600;
     font-size: 32px;
-    font-style: bold;
-    
+       
 }
-
 
 #navbar-toggler {
     color: #000;
     font-size: 22px;
     font-style: bold;
     font-weight: 700;
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Capriola', sans-serif;
 
 }  
 
+/* --------------------------------- Footer */
 
+
+.main-footer { 
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-left: 20px;
+    border-style: solid;
+    border-width: 12px;
+    border-color: #614D3C;
+    padding: 30px;
+    border-top-right-radius: 25%;
+    border-bottom-left-radius: 25%;      
+
+}  
+
+.main-footer-container {
+    background-size: cover;
+    width: 100%;
+    justify-content: center;
+    min-height: 120px;
+    line-height: 20px;
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-bottom: 8px;
+
+}
+
+.main-footer h4 {
+    font-size: 20px;
+    font-family: 'Capriola', sans-serif;
+    color: #183E0C;
+    margin-bottom: 5px;
+  
+} 
+
+.main-footer p {
+    font-size: 16px;
+    font-family: 'Capriola', sans-serif;
+    color: #183E0C;
+    margin-bottom: 35px;
+    letter-spacing: 2px;
+    padding-bottom: 8px;
+
+}  
+
+.cv-pdf i {
+    font-size: 20px;
+    color: #614D3C;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+
+}
+
+.cv-pdf i:hover {
+    color: #A99282;
+
+}
+
+.main-footer-col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+ 
+}
+
+.main-footer-col-2 h4 {
+    font-family: 'Capriola', sans-serif;
+    font-size: 20px;
+    color: #183E0C;
+    margin-bottom: 5px;
+   
+}
+
+.main-footer-col-3 h4 {
+    font-family: 'Capriola', sans-serif;
+    font-size: 20px;
+    color: #183E0C;
+    margin-bottom: 5px;
+   
+}
+
+.main-footer-col-3 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+}
+
+.social-link  i {
+    width: 34px;
+    height: 34px;
+    padding: 14px 0;
+    border-radius: 50%;
+    font-size: 20px;
+    line-height: 5px;
+    text-align: center;
+    color:#F4F2F0;
+    background: #614D3C;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+
+}
+
+.social-link  i:hover {
+    background: #A99282;
+
+} 
 
 /* --------------------------------- About Heading */
+
 
 .body-about h3{
     padding-top: 25px;
     padding-bottom: 18px;
-    font-family: 'Dancing Script', cursive;
-    font-size: 44px;
+    font-family: 'Merienda', cursive;
+    font-size: 32px;
     color: #69615B;
     font-weight: 700;
     letter-spacing: 1px;
 
 }
 
-
 /* ---------------------------------Body About */
+
 
 .card-one,
 .card-three {
@@ -231,6 +245,7 @@ background-color: #D3C0B2;
     border-color: #24522E;
     border-top-left-radius: 25%;
     border-bottom-right-radius: 25%
+
 }
 
 .card-two {
@@ -242,19 +257,21 @@ background-color: #D3C0B2;
     border-color: #24522E;
     border-top-right-radius: 25%;
     border-bottom-left-radius: 25%
-}
 
+}
 
 .card-one {
     display: flex;
     flex-wrap: nowrap;
     column-gap: 5px;
+
 }  
 
 .card-two {
     display: flex;
     flex-wrap: nowrap;
     column-gap: 5px;
+
 }  
 
 .card-three {
@@ -264,12 +281,12 @@ background-color: #D3C0B2;
    
 }  
 
-
 .col {
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 justify-content: space-between;
 padding-left: 5%;
+
 }   
 
 .card-1,
@@ -304,226 +321,314 @@ padding-left: 5%;
 .card-one h5 {
 color: #614D3C;
 text-align: center;
+font-family: 'Merienda', cursive;
+font-size: 18px;
+font-weight: 700;
 
 }
 
 .card-two h5 {
     color: #614D3C;
     text-align: center;
-    
+    font-family: 'Merienda', cursive;
+    font-size: 18px;
+    font-weight: 700;
 } 
 
 .card-three h5 {
     color: #614D3C;
     text-align: center;
-        
+    font-family: 'Merienda', cursive;
+    font-size: 18px;
+    font-weight: 700;
 } 
 
-
 .card-text {
-    font-family: 'Dosis', sans-serif;
-    font-size: 18px;
+    font-family: 'Capriola', sans-serif;
+    font-size: 14px;
     color: #614D3C;
     font-weight: 500;
     padding: 5px;
+    margin-top: 5px;
 
 }
 
-
 /* --------------------------------- Skills and Attributes */
 
-.skill-one-container {
+
+.border-frame {
+    border-style: solid;
+    border-width: 10px;
+    border-color: #614D3C;
+    border-radius: 15%;
+    padding: 20px;
+    margin: 20px;
+    background-color: #E0E4EF;
+    opacity: 50%;
+}
+
+.skill-title-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
     background-size: cover;
-    width: 100%;
-    justify-content: left;
+    width: 100%; 
+    padding-top: 10px;
+    padding-bottom: 5px;
+ 
+} 
+
+.skill-title h2 {
+    color: #000;
+    font-family: 'Merienda', cursive;
+    font-size: 36px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 25px;
+    
+} 
+
+ .skill-one-container {
+    background-size: cover;
     min-height: 120px;
-    padding-top: 15px;
     padding-left: 15px;
     padding-bottom: 15px;
     
  } 
 
-
 .skill-one h4 {
-    color: #24522E;
-    font-size: 24px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;  
-    font-style: bold; 
-    color: #707070;
+    color: #000
+    font-family: 'Capriola', sans-serif;
+    font-size: 26px;
+    font-style: bold;
     margin-bottom: 5px;
      
 }
 
 .skill-one p {
-    color: #A0BFB0;
+    color: #000;
     font-size: 18px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500; 
-    font-style: bold;
+    font-family: 'Capriola', sans-serif;
     margin-bottom: 35px;
     letter-spacing: 1px;
     padding-bottom: 8px;
+
 }  
 
-.skill-title-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.skill-two-container {
     background-size: cover;
-    width: 100%; 
-    padding-top: 5px;
-    padding-bottom: 5px;
- 
-}  
-
-.skill-title h2 {
-    color: #69615B;
-    font-family: 'Dancing Script', cursive;   
-    font-weight: 800;
-    font-size: 48px;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-
-.skill-three-container {
-    background-size: cover;
-    width: 100%;
     min-height: 120px;
-    padding-top: 5px;
+    padding-top: 25px;
     padding-bottom: 5px;
     
 }  
 
-
-.skill-three {
+.skill-two {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
+    flex-wrap: wrap;
 
-.skill-three h4 {
-    color: #24522E;
-    font-size: 24px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;  
-    font-style: bold; 
+}   
+
+.skill-two h4 {
+    color: #000
+    font-family: 'Capriola', sans-serif;
+    font-size: 26px;
+    font-style: bold;
     margin-bottom: 5px;
      
 }
 
-.skill-three ul {
-    color: #A0BFB0;
+.skill-two ul {
+    color: #000;
     font-size: 18px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500; 
-    font-style: bold;
-    margin-bottom: 35px;
+    font-family: 'Capriola', sans-serif;
+    margin-bottom: 5px;
     letter-spacing: 1px;
-    padding-bottom: 8px;   
+    padding-bottom: 3px;   
 
 }
 
 
-/* ---------------------------------Footer */ 
+/* --------------------------------- Work History */
 
-.main-footer { 
-    margin-top: 20px;
-    margin-right: 25px;
-    margin-left: 20px;
-    border-style: solid;
-    border-width: 24px;
-    border-color: #857B74;  
-    padding-left: 60px;
-    padding-right: 20px;
-    padding-top: 30px;
-    padding-bottom: 30px; 
-    border-top-right-radius: 25%;
-    border-bottom-left-radius: 25%;      
+.history-heading {
+    color: #183E0C;
+    font-size: 48px;
+    font-family: 'Merienda', cursive;
+    font-weight: 600;
+    background-size: cover;
+    padding-bottom: 5px;
+    padding-top: 5px;
 
-}  
+   
+}
 
-
-.main-footer-container {
+.history-items-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background-size: cover;
     width: 100%;
-    justify-content: center;
-    min-height: 120px;
-    line-height: 20px;
-    padding-top: 5px;
-    padding-left: 20px;
-    padding-bottom: 10px;
- 
+    padding-left: 30px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+
 }
 
- 
-.main-footer h4 {
-    text-align: center;
-    font-size: 24px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;  
-    font-style: bold; 
-    color: #707070;
-    margin-bottom: 5px;
-    position: relative;
+.timeline-item-time {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: flex-start;
     
-} 
-
-
-.main-footer p {
-    font-size: 20px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500; 
-    font-style: bold;
-    color: #4D4D4D;
-    margin-bottom: 35px;
-    position: relative;
-    letter-spacing: 2px;
-    padding-bottom: 8px;
 }  
 
+.timeline-item-com {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
 
-.cv-pdf i {
+}
+
+.timeline-item-pos{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-content: flex-end;
+    justify-content: center;
+ 
+}
+
+.timeline-item-time h4,
+.timeline-item-com h4,
+.timeline-item-pos h4 {   
+    color: #183E0C;
+    font-family: 'Capriola', sans-serif;
     font-size: 24px;
-    color: #857B74 ;
+    text-decoration: underline;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin: 0;
+
+}   
+
+.timeline-item-time p,
+.timeline-item-com p,
+.timeline-item-pos p {   
+    color: #183E0C;
+    font-family: "Capriola", sans-serif;
+    font-size: 18px;
+    padding-top: 10px;
+    margin: 0;
+
+}  
+    
+.history-items {
+    margin-bottom: 30px;
+    padding-left: 50px;
+    padding-right: 30px;
+}
+
+/* ---------------------------------Contact Form */
+
+
+.contact-form-container {
+    display: flex;
+    flex-wrap: nowrap;
+    background-size: cover;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+
+}
+
+.form-heading h2 {
+    color: #183E0C;
+    font-family: 'Merienda', cursive;
+    font-weight: 700;
+    font-size: 32px;
+    align-items: center;
+    letter-spacing: 1px;
+
+}
+
+.contact-form-container {
     text-align: center;
-    padding-left: 5px;
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    
+}  
 
+.contact-form-heading h3 {
+    color: #69615B;
+    font-size: 28px;
+    font-family: 'Capriola', sans-serif;
+    font-style: italic;
+    margin-bottom: 15px;
+  
 }
 
-.cv-pdf i:hover {
-    color: #A99282;
-}
-
-
-.social-link  i {
-margin-left: 185px;
-    width: 34px;
-    height: 34px;
-    padding: 14px 0;
-    border-radius: 50%;
-    font-size: 24px;
-    line-height: 5px;
-    text-align: center;
-    color:#F4F2F0;
-    background: #857B74;
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-}
-
-.social-link  i:hover {
-    background: #A99282;
+.centre-form {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 auto; 
+    width: 70%;  
+    display: flex; 
+    flex-wrap: nowrap;
+    align-items: center;
+    align-content: center;
 
 } 
 
+.form-heading h4 {
+    color: #69615B;
+    font-size: 26px;
+    font-family: 'Capriola', sans-serif;
+    font-style: italic;
+    margin-bottom: 15px;
+
+}
+.submit-form {
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 100%;
+    width: 60%;
+
+}
+
+.submit-form,
+.form-control {
+    color: #69615B;
+    font-size: 18px;
+    font-family: 'Capriola', sans-serif;
+    margin-bottom: 15px;
+
+}
 
 
+button[type="submit"] {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: #183E0C;
+    background-color: #E0E4EF;
+    font-size: 16px;
+    font-family: 'Capriola', sans-serif;
+
+}
+
+/* --------------------------------Submit-Form Media Queries */
+
+@media(min-width: 992px) {
+    .centre-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
+
+}
  
