--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,23 @@ background-color: #D3C0B2;
   
 }   
 
+
+.card {
+display: flex;
+flex-direction: row;
+align-items: center;
+padding-left: 15px;
+margin-right: 10px;
+
+
+}
 .profile-logo {
     background: url("../images/profile.jpg");
     background-size: cover;
     background-repeat: no-repeat center center;
-    height: 300px;
-    width: 250px;
-    flex-wrap: nowrap;
+    height: 320px;
+    width: 550px; 
+
   
 }
 
@@ -67,7 +77,7 @@ background-color: #D3C0B2;
     height: 200px;
     width: 100%; 
     margin: 0;
-    padding: 5px;
+    padding: 2px;
     justify-content: center;
     align-items: center;
 
@@ -80,7 +90,7 @@ background-color: #D3C0B2;
     font-size: 38px;
     text-align: center;
     text-decoration: none;
-    flex-wrap: nowrap;
+   
 
 } 
 
